# MultivarTVPsplinePSD

./: .gitignore  pyproject.toml
notes/: make_figures.py  multivar_psd.md
src/multivar_tv_psd/: __init__.py  model.py  periodogram.py  splines.py
tests/: test_demo.py  test_model.py
