[project]
name = "multivar-tv-psd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arviz-base>=1.2.0",
    "arviz-plots>=1.2.0",
    "arviz-stats>=1.2.0",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "numpyro>=0.21.0",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
